static/styles/zulip.scss
/* ... */
#invite-user .modal-body {
    margin-bottom: 58px;
    position: relative;
}

#invite-user .modal-footer {
    position: absolute;
    bottom: 0px;
    width: calc(100% - 30px);
}

#invite_status {
    display: none;
}

#invite-user-label {
    font-size: 1em;
    font-weight: 700;
    text-align: center;
    text-transform: uppercase;
}

#multiuse_invite_status {
    display: none;
    margin-top: 7px;
    margin-bottom: -5px;
    text-align: left;
}

#invite-stream-checkboxes {
    padding-bottom: 26px;
}

#invite-method-choice {
    margin-top: 2px;
}

#multiuse_radio_section {
    margin-top: 4px;
    margin-bottom: -2px;
    display: none;
}

#generate_multiuse_invite_button {
    position: relative;
    top: 1px;
}

#invite-user .invite-stream-controls {
    margin-top: 5px;
}

.settings-dropdown-caret {
    margin-left: 8px;
    margin-right: 8px;
    font-size: 14px;
}

#notifications-area {
    position: fixed;
    z-index: 10;
    bottom: 0px;
    right: 20px;
    width: 200px;
    height: auto;
}

.notifications-gravatar img {
    max-width: 25px;
    max-height: 25px;
    padding-left: 4px;
    padding-top: 4px;
}

.empty_feed_notice {
    padding: 3em 1em;
    display: none;
    text-align: center;
}

.notification {
    cursor: pointer;
}

.message-fade,
.user_sidebar_entry.user-fade {
    opacity: 0.4;
}

.emoji {
    height: 25px;
    width: 25px;
    position: relative;
    margin-top: -7px;
    vertical-align: middle;
    top: 3px;
}

.twitter-tweet {
    border: 1px solid hsl(0, 0%, 87%);
    padding: .5em .75em;
    margin-bottom: 0.25em;
    word-break: break-word;
    min-height: 48px;
}

.twitter-avatar {
    float: left;
    width: 48px;
    height: 48px;
    margin-right: .75em;
}

.star {
    display: inline-block;
    font-size: 14px;
}

.star:not(.empty-star) {
    opacity: 1 !important;
    pointer-events: all !important;
    color: hsl(106, 77%, 29%);
}

.messagebox:hover .message_controls .empty-star {
    opacity: 0.4;
}

.messagebox:hover .message_controls .empty-star:hover {
    cursor: pointer;
    opacity: 1;
}

.star:hover {
    cursor: pointer;
    color: hsl(153, 80%, 25%);
}

/* FIXME: Combine this rule with the one in portico.css somehow? */
#pw_strength {
    width: 100%;
    height: 10px;
    margin-bottom: 0px;
}

/* Override padding-top on form labels when they label only text */
.form-horizontal .label_for_text {
    padding-top: 0;
}

#pw_change_controls {
    display: none;
}

.sub-unsub-message,
.date_row {
    text-align: center;
    padding-bottom: 10px;
}

.message_row .date_row {
    /* We only want padding for the date rows between recipient blocks */
    padding-bottom: 0px;
}

.date_row .date-direction {
    display: inline-block;
    padding-right: 5px;
}

.date_row .date-line {
    display: inline-block;
    vertical-align: middle;
    width: 33%;
    border-top: 1px solid hsl(0, 0%, 88%);
    border-bottom: 1px solid hsl(0, 0%, 100%);
    margin: 0px 5px 0px 5px;
}

.sub-unsub-message span,
.date_row span {
    display: block;
    padding: 4px;
    overflow: hidden;
    text-transform: uppercase;
    font-size: 0.8em;
    opacity: 0.5;
}

.sub-unsub-message span {
    font-size: 1em;
    text-transform: none;
}

.sub-unsub-message span::before,
.sub-unsub-message span::after,
.date_row span::before,
.date_row span::after {
    display: inline-block;
    position: relative;
    content: " ";
    vertical-align: middle;
    width: 50%;
    height: 0px;
    border-top: 1px solid hsl(0, 0%, 88%);
    border-bottom: 1px solid hsl(0, 0%, 100%);
}

.sub-unsub-message span::before,
.date_row span::before {
    right: 0.5em;
    margin-left: -50%;
}

.sub-unsub-message span::after,
.date_row span::after {
    left: 0.5em;
    margin-right: -50%;
}

.include-sender .message_edit {
    margin-top: -14px;
}

.message_edit {
    display: none;
    margin-top: 5px;
    margin-left: 47px;
}

/* Reduce some of the heavy padding from Bootstrap. */
#message_edit_form {
    margin-bottom: 10px;
    cursor: default;
}

#message_edit_form .edit-controls {
    margin-left: 0px;
    margin-top: 0px;
}

#message_edit_form textarea {
    width: 100%;
    min-width: 206px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

#message_edit_form .control-group.no-margin {
    margin-bottom: 0px;
}

#message_edit_form .action-buttons {
    margin: 10px 0px;
}

#topic_edit_form {
    display: inline-block;
    margin: 0 0 0 0;
    height: 22px;
    padding-left: 20px;
    padding-right: 3px;
    line-height: 22px;
    margin-left: -15px;
}

.message_body_gravatar {
    width: 20px;
    height: 20px;
    margin: 2px 2px 2px 0px;
    vertical-align: text-bottom;
}

.user-group-mention,
.user-mention {
    background-color: hsl(0, 0%, 93%);
    border-radius: 3px;
    padding: 0 0.2em;
    box-shadow: 0px 0px 0px 1px hsl(0, 0%, 80%);
    margin-right: 2px;
    margin-left: 2px;
    white-space: nowrap;
    background: -moz-linear-gradient(top, hsla(0, 0%, 0%, 0.1) 0%, hsla(0, 0%, 0%, 0.0) 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, hsla(0, 0%, 0%, 0.1)), color-stop(100%, hsla(0, 0%, 0%, 0.0)));
    background: -webkit-linear-gradient(top, hsla(0, 0%, 0%, 0.1) 0%, hsla(0, 0%, 0%, 0.0) 100%);
    background: -o-linear-gradient(top, hsla(0, 0%, 0%, 0.1) 0%, hsla(0, 0%, 0%, 0.0) 100%);
    background: -ms-linear-gradient(top, hsla(0, 0%, 0%, 0.1) 0%, hsla(0, 0%, 0%, 0.0) 100%);
    background: linear-gradient(to bottom, hsla(0, 0%, 0%, 0.1) 0%, hsla(0, 0%, 0%, 0.0) 100%);
    display: inline-block;
    margin-bottom: 1px;
}

.user-mention-me :not(.silent) {
    background-color: hsl(112, 88%, 87%);
}

.alert-word {
    background-color: hsla(102, 85%, 57%, 0.5);
}

#organization h1,
#settings h1 {
    font-size: 25px;
    font-weight: 300;
}

#organization .organization-icon,
#settings .settings-icon {
    margin-right: 10px;
    font-size: 20px;
}
/* ... */

