message view: Fix margin for date separator.
Without this tweak the date separator overlaps
the left borner.

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -2651,6 +2651,10 @@ div.topic_edit_spinner .loading_indicator_spinner {
     padding-bottom: 0px;
 }
 
+.date_row {
+    margin-left: 2px;
+}
+
 .date_row .date-direction {
     display: inline-block;
     padding-right: 5px;
